resources/css/app.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

.input {
  @apply py-2 px-3 bg-white border-2 border-zinc-400 focus:border-zinc-500 focus:outline-none rounded;
}

/*! purgecss start ignore */
.prose {
  --tw-prose-pre-bg: theme('colors.zinc.800');

  @apply text-base font-medium text-zinc-700 max-w-full leading-relaxed;

  .torchlight, pre, pre code {
    @apply font-code text-sm p-0;
  }

  .torchlight {
    @apply p-1 block min-h-full;
    background: none !important;
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;

    &::after {
      content: 'Code highlighting by torchlight.dev';
      @apply block text-[10px] pt-px clear-both text-zinc-600;
    }

    &.has-focus-lines {
      .line {
        font-size: 0.85rem;
        @apply filter blur-xxs;

        &:not() {
          text-shadow: none;
          font-size: inherit;
          @apply opacity-60;
        }

        &.line-focus {
          @apply blur-none;
        }
      }
    }

    .line-number {
      @apply pr-2 pl-1 text-zinc-600 !important;
    }
  }

  code {
    @apply bg-zinc-100 px-2 py-0.5 font-semibold rounded font-code;

    &::before, &::after {
        @apply hidden;
    }
  }

  a {
    @apply text-zinc-800 font-bold underline hover:text-zinc-700;

    &.heading-permalink {
      @apply hidden text-zinc-300 absolute no-underline hover:underline hover:text-zinc-400 transform -translate-x-full pr-2;
    }
  }

  h1, h2, h3, h4, h5, h6 {
    @apply font-bold relative;
  }

  img {
    @apply max-w-full shadow-lg;
  }

  tbody tr {
    border: none;
  }

  blockquote {
    @apply p-4 my-6 mx-0 text-zinc-800 bg-zinc-100 border-l-8 border-zinc-300 space-y-2;

    p {
      @apply m-0 p-0;

      &:first-of-type::before, &:first-of-type::after {
        content: '';
      }
    }
  }

  .table-of-contents {
    @apply mb-8 p-0 pb-4 border-b border-zinc-300;

    &::before {
      content: 'Quick links';
      @apply font-bold text-zinc-900;
    }

    li {
      @apply ml-8;

      p, ul {
        @apply m-0 p-0;
      }
    }

    a {
      @apply font-medium no-underline;
      &:hover {
        @apply underline;
      }
    }
  }
}

@media (min-width: 768px) {
  .prose {
    blockquote {
      @apply ml-4;
    }

    a.heading-permalink {
      @apply block;
    }
  }
}

html.dark {
  .prose {
    --tw-prose-pre-bg: theme('colors.zinc.800');

    @apply text-white;

    h1, h2, h3, h4, h5, h6 {
      @apply text-white;
    }

    a {
      @apply text-zinc-100 hover:text-zinc-300;

      &.heading-permalink {
        @apply text-zinc-600 hover:text-zinc-700;
      }
    }

    code {
      @apply bg-zinc-800 text-zinc-200 rounded;
    }

    strong {
      @apply text-white;
    }

    blockquote {
      @apply bg-zinc-800 text-zinc-100 border-zinc-700;
    }

    .table-of-contents {
      @apply border-zinc-700;

      &::before {
        @apply text-zinc-100;
      }
    }
  }
}

/*! purgecss end ignore */

